src/styles/FreshBlog.css
.wholeblog {
  width: 100vw;
  margin: 0;
  padding: 0 3% 0 3%;
}

.card {
  border: 0;
}

.card-block {
  padding: 0;
  background-color: #FAF9F5;
}

.blogsection {
  padding: 0;

}

.blogtitle {
  text-align: center;
  margin: 7% 0 3% 0;
  font-size: 26px;
  font-weight: 500;
}

.blogimg {
  width: 98%;
  height: 303px;
}

.card-title {
  font-weight: bold;
}

.bottomlinktoblog{
  text-align: center;
  margin: 4% 0 4% 0;

}

.bloglink {
  color: #E55400;
}

